--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,24 @@
 machine:
   timezone: Asia/Tokyo
+  environment:
+    TERRAFORM_VERSION: 0.9.1
 
 dependencies:
   override:
-    - sudo pip install awscli
+    - |
+      sudo pip install awscli
+      ls -alR ~
+      if [[ ! -f ~/.local/bin/terraform ]]; then
+        mkdir -p ~/.local/bin
+        cd ~/.local/bin
+        wget "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip"
+        unzip *.zip
+        rm *.zip
+      fi
   post:
     - aws configure set region ap-northeast-1
+  cache_directories:
+    - ~/.local/bin
 
 test:
   pre:
