--- a/circle.yml
+++ b/circle.yml
@@ -2,14 +2,15 @@ machine:
   timezone: Asia/Tokyo
   environment:
     TERRAFORM_VERSION: 0.9.1
+    PATH: $PATH:$HOME/bin
 
 dependencies:
   override:
     - |
       sudo pip install awscli
-      if [[ ! -f ~/.local/bin/terraform ]]; then
-        mkdir -p ~/.local/bin
-        cd ~/.local/bin
+      if [[ ! -f ~/bin/terraform ]]; then
+        mkdir -p ~/bin
+        cd ~/bin
         wget "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip"
         unzip *.zip
         rm *.zip
@@ -17,7 +18,7 @@ dependencies:
   post:
     - aws configure set region ap-northeast-1
   cache_directories:
-    - ~/.local/bin
+    - ~/bin
 
 test:
   pre:
