--- a/circle.yml
+++ b/circle.yml
@@ -2,15 +2,15 @@ machine:
   timezone: Asia/Tokyo
   environment:
     TERRAFORM_VERSION: 0.9.1
-    PATH: $PATH:$HOME/bin
+    PATH: $PATH:$HOME/.local/bin
 
 dependencies:
   override:
     - |
-      sudo pip install awscli
-      if [[ ! -f ~/bin/terraform ]]; then
-        mkdir -p ~/bin
-        cd ~/bin
+      sudo pip install awscli --user
+      if [[ ! -f ~/.local/bin/terraform ]]; then
+        mkdir -p ~/.local/bin
+        cd ~/.local/bin
         wget "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip"
         unzip *.zip
         rm *.zip
@@ -18,7 +18,7 @@ dependencies:
   post:
     - aws configure set region ap-northeast-1
   cache_directories:
-    - ~/bin
+    - ~/.local/bin
 
 test:
   pre:
