--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,9 @@ machine:
 dependencies:
   override:
     - |
-      sudo pip install awscli --user
+      if [[ ! -f ~/.local/bin/aws ]]; then
+        pip install awscli --user
+      fi
       if [[ ! -f ~/.local/bin/terraform ]]; then
         mkdir -p ~/.local/bin
         cd ~/.local/bin
@@ -17,8 +19,8 @@ dependencies:
       fi
   post:
     - aws configure set region ap-northeast-1
-  cache_directories:
-    - ~/.local/bin
+#  cache_directories:
+#    - ~/.local/bin
 
 test:
   pre:
