--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ machine:
   timezone: Asia/Tokyo
   environment:
     TERRAFORM_VERSION: 0.9.1
-    PATH: $PATH:$HOME/.local/bin
+    PATH: $HOME/.local/bin:$PATH
 
 dependencies:
   override:
@@ -19,8 +19,8 @@ dependencies:
       fi
   post:
     - aws configure set region ap-northeast-1
-#  cache_directories:
-#    - ~/.local/bin
+  cache_directories:
+    - ~/.local/bin
 
 test:
   pre:
