--- a/circle.yml
+++ b/circle.yml
@@ -18,8 +18,6 @@ dependencies:
           rm *.zip
         )
       fi
-  post:
-    - aws configure set region ${AWS_DEFAULT_REGION}
   cache_directories:
     - ~/.local/bin
 
@@ -30,25 +28,30 @@ test:
     - |
       echo "[TEST] AWS CLI is installed."
       which aws
+    - |
       echo "[TEST] Terraform is installed."
       which terraform
   post:
     - echo "--- test finished ---"
 
 deployment:
-  test:
+  master:
     branch: master
     commands:
       - uname -a
-  production:
-    branch: release/prd
+  env-proxy-prd:
+    branch: release/env-proxy-prd
     commands:
       - uname -a
-  staging:
-    branch: release/stg
+  env-proxy-stg:
+    branch: release/env-proxy-stg
     commands:
       - uname -a
-  development:
-    branch: release/dev
+  env-infra-prd:
+    branch: release/env-infra-prd
+    commands:
+      - uname -a
+  env-infra-stg:
+    branch: relase/env-infra-stg
     commands:
       - uname -a
