add terraform directory

--- a/circle.yml
+++ b/circle.yml
@@ -34,11 +34,21 @@ test:
     - |
       if [[ "${CIRCLE_BRANCH}" = "master" ]]; then
         true
-      elif
-        cd env/${CIRCLE_BRANCH}
-        terraform remote config -backend=s3 -backend-config="bucket=${BUCKET_NAME}" -backend-config='key=${CIRCLE_BRANCH}/terraform.tfstate'
-        terraform get -update
-        terraform plan
+      elif [[ "${CIRCLE_BRANCH}" = "release/production" ]]; then
+        echo cd terraform/env/prd
+        echo terraform remote config -backend=s3 -backend-config="bucket=${BUCKET_NAME}" -backend-config='key=${CIRCLE_BRANCH}/terraform.tfstate'
+        echo terraform get -update
+        echo terraform plan
+      elif [[ "${CIRCLE_BRANCH}" = "release/staging" ]]; then
+        echo cd terraform/env/stg
+        echo terraform remote config -backend=s3 -backend-config="bucket=${BUCKET_NAME}" -backend-config='key=${CIRCLE_BRANCH}/terraform.tfstate'
+        echo terraform get -update
+        echo terraform plan
+      elif [[ "${CIRCLE_BRANCH}" = "release/development" ]]; then
+        echo cd terraform/env/dev
+        echo terraform remote config -backend=s3 -backend-config="bucket=${BUCKET_NAME}" -backend-config='key=${CIRCLE_BRANCH}/terraform.tfstate'
+        echo terraform get -update
+        echo terraform plan
       fi
   post:
     - echo "--- test finished ---"
@@ -48,51 +58,27 @@ deployment:
     branch: master
     commands:
       - uname -a
-  env-proxy-prd:
-    branch: release/env-proxy-prd
+  production:
+    branch: release/prd
     commands:
       - |
-        cd env/${CIRCLE_BRANCH}
+        cd terraform/env/prd
         terraform get -update
         terraform apply
         terraform remote push
-  env-proxy-stg:
-    branch: release/env-proxy-stg
+  staging:
+    branch: release/stg
     commands:
       - |
-        cd env/${CIRCLE_BRANCH}
+        cd terraform/env/stg
         terraform get -update
         terraform apply
         terraform remote push
-  env-infra-prd:
-    branch: release/env-infra-prd
+  development:
+    branch: release/dev
     commands:
       - |
-        cd env/${CIRCLE_BRANCH}
-        terraform get -update
-        terraform apply
-        terraform remote push
-  env-infra-stg:
-    branch: release/env-infra-stg
-    commands:
-      - |
-        cd env/${CIRCLE_BRANCH}
-        terraform get -update
-        terraform apply
-        terraform remote push
-  env-website01-prd:
-    branch: release/env-website01-prd
-    commands:
-      - |
-        cd env/${CIRCLE_BRANCH}
-        terraform get -update
-        terraform apply
-        terraform remote push
-  env-website01-stg:
-    branch: release/env-website01-stg
-    commands:
-      - |
-        cd env/${CIRCLE_BRANCH}
+        cd terraform/env/dev
         terraform get -update
         terraform apply
         terraform remote push
