--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,9 @@
+general:
+  branches:
+    only:
+      - master
+      - /environment\/.*/
+
 machine:
   timezone: Asia/Tokyo
   environment:
@@ -32,24 +38,19 @@ test:
       echo "[TEST] Terraform is installed."
       which terraform
     - |
-      if [[ "${CIRCLE_BRANCH}" = "master" ]]; then
-        true
-      elif [[ "${CIRCLE_BRANCH}" = "release/production" ]]; then
-        echo cd terraform/env/prd
-        echo terraform remote config -backend=s3 -backend-config="bucket=${BUCKET_NAME}" -backend-config='key=${CIRCLE_BRANCH}/terraform.tfstate'
-        echo terraform get -update
-        echo terraform plan
-      elif [[ "${CIRCLE_BRANCH}" = "release/staging" ]]; then
-        echo cd terraform/env/stg
-        echo terraform remote config -backend=s3 -backend-config="bucket=${BUCKET_NAME}" -backend-config='key=${CIRCLE_BRANCH}/terraform.tfstate'
-        echo terraform get -update
-        echo terraform plan
-      elif [[ "${CIRCLE_BRANCH}" = "release/development" ]]; then
-        echo cd terraform/env/dev
-        echo terraform remote config -backend=s3 -backend-config="bucket=${BUCKET_NAME}" -backend-config='key=${CIRCLE_BRANCH}/terraform.tfstate'
-        echo terraform get -update
-        echo terraform plan
+      if [[ "${CIRCLE_BRANCH}" = "master" -o "${CIRCLE_BRANCH}" = "environment/staging" ]]; then
+        TF_BUCKET_NAME="kirino-minato-aws02-terraform"
+        export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_STG}
+        export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_STG}
+      elif [[ "${CIRCLE_BRANCH}" = "environment/production" ]]; then
+        TF_BUCKET_NAME="kirino-minato-aws03-terraform"
+        export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_PRD}
+        export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_PRD}
       fi
+      echo cd terraform/${CIRCLE_BRANCH}
+      echo terraform remote config -backend=s3 -backend-config="bucket=${TF_BUCKET_NAME}" -backend-config='key=tfstate/terraform.tfstate'
+      echo terraform get -update
+      echo terraform plan
   post:
     - echo "--- test finished ---"
 
@@ -59,26 +60,18 @@ deployment:
     commands:
       - uname -a
   production:
-    branch: release/prd
+    branch: environment/production
     commands:
       - |
-        cd terraform/env/prd
+        cd terraform/${CIRCLE_BRANCH}
         terraform get -update
         terraform apply
         terraform remote push
   staging:
-    branch: release/stg
+    branch: environment/staging
     commands:
       - |
-        cd terraform/env/stg
-        terraform get -update
-        terraform apply
-        terraform remote push
-  development:
-    branch: release/dev
-    commands:
-      - |
-        cd terraform/env/dev
+        cd terraform/${CIRCLE_BRANCH}
         terraform get -update
         terraform apply
         terraform remote push
