--- a/circle.yml
+++ b/circle.yml
@@ -38,7 +38,7 @@ test:
       echo "[TEST] Terraform is installed."
       which terraform
     - |
-      if [[ "${CIRCLE_BRANCH}" = "master" -o "${CIRCLE_BRANCH}" = "environment/staging" ]]; then
+      if [[ "${CIRCLE_BRANCH}" = "master" || "${CIRCLE_BRANCH}" = "environment/staging" ]]; then
         TF_BUCKET_NAME="kirino-minato-aws02-terraform"
         export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_STG}
         export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_STG}
