--- a/circle.yml
+++ b/circle.yml
@@ -39,15 +39,16 @@ test:
       which terraform
     - |
       if [[ "${CIRCLE_BRANCH}" = "master" || "${CIRCLE_BRANCH}" = "environment/staging" ]]; then
-        TF_BUCKET_NAME="kirino-minato-aws02-terraform"
         export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_STG}
         export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_STG}
+        TF_BUCKET_NAME="kirino-minato-aws02-terraform"
+        cd terraform/environment/staging
       elif [[ "${CIRCLE_BRANCH}" = "environment/production" ]]; then
-        TF_BUCKET_NAME="kirino-minato-aws03-terraform"
         export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_PRD}
         export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_PRD}
+        TF_BUCKET_NAME="kirino-minato-aws03-terraform"
+        cd terraform/environment/production
       fi
-      echo cd terraform/${CIRCLE_BRANCH}
       echo terraform remote config -backend=s3 -backend-config="bucket=${TF_BUCKET_NAME}" -backend-config='key=tfstate/terraform.tfstate'
       echo terraform get -update
       echo terraform plan
