--- a/circle.yml
+++ b/circle.yml
@@ -41,16 +41,23 @@ test:
       if [[ "${CIRCLE_BRANCH}" = "master" || "${CIRCLE_BRANCH}" = "environment/staging" ]]; then
         export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_STG}
         export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_STG}
-        TF_BUCKET_NAME="kirino-minato-aws02-terraform"
-        cd terraform/environment/staging
+        export TF_BUCKET_NAME="kirino-minato-aws02-terraform"
+        export TF_DIRECTORY_PATH=terraform/environment/staging
       elif [[ "${CIRCLE_BRANCH}" = "environment/production" ]]; then
         export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_PRD}
         export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_PRD}
-        TF_BUCKET_NAME="kirino-minato-aws03-terraform"
-        cd terraform/environment/production
+        export TF_BUCKET_NAME="kirino-minato-aws03-terraform"
+        export TF_DIRECTORY_PATH=terraform/environment/production
       fi
+    - |
+      cd ${TF_DIRECTORY_PATH}
+      pwd
       terraform remote config -backend=s3 -backend-config="bucket=${TF_BUCKET_NAME}" -backend-config='key=tfstate/terraform.tfstate'
+    - |
+      pwd
       terraform get -update
+    - |
+      pwd
       terraform plan
   post:
     - echo "--- test finished ---"
