add terraform init command.

--- a/Terraform/environment/development/Makefile
+++ b/Terraform/environment/development/Makefile
@@ -3,10 +3,12 @@ AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_DEV}
 AWS_DEFAULT_REGION=us-west-1
 
 test:
+	terraform init
 	terraform get -update
 	terraform plan
 
 deploy:
+	terraform init
 	terraform get -update
 	terraform apply
 	terraform remote push
