Change terraform tf.

--- a/Terraform/environment/development/Makefile
+++ b/Terraform/environment/development/Makefile
@@ -1,10 +1,10 @@
 test:
-	terraform init
+	terraform init -get=true
 	terraform get -update
 	terraform plan
 
 deploy:
-	terraform init
+	terraform init -get=true
 	terraform get -update
 	terraform apply
 	terraform remote push
