Add makefile messages.

--- a/Terraform/environment/development/Makefile
+++ b/Terraform/environment/development/Makefile
@@ -1,10 +1,21 @@
 test:
+	$(info ---Terraform test start---)
+	$(info terraform init)
 	terraform init -get=true
+	$(info terraform get)
 	terraform get -update
+	$(info terraform plan)
 	terraform plan
+	$(info ---Terraform test end--)
 
 deploy:
+	$(info ---Terraform deploy start---)
+	$(info terraform init)
 	terraform init -get=true
+	$(info terraform get)
 	terraform get -update
+	$(info terraform apply)
 	terraform apply
+	$(info terraform remote push)
 	terraform remote push
+	$(info ---Terraform deploy end---)
