--- a/circle.yml
+++ b/circle.yml
@@ -85,7 +85,9 @@ deployment:
   master:
     branch: master
     commands:
-      - uname -a
+      - |
+        # [DEPLOY] branch master does not any deployment.
+        echo "Test stage is all succeeded."
   production:
     branch: environment/production
     commands:
